Fix search icon spacing

--- a/style.scss
+++ b/style.scss
@@ -913,7 +913,7 @@ img.wp-smiley {
 			.search-toggle a {
 				font-size: 22px;
 				text-decoration: none;
-				padding: 4px;
+				padding: 10px 4px 4px;
 			}
 			.form-group {
 				margin-left: 6px;
